--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!-- Example image URL -->
+<!-- TODO 1: Create the HTML Boilerplate -->
 
-<h1>It's my birthday</h1>
-<h2>On 25th September</h2>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
-" alt="birthday cake image">
-<h3>What to bring</h3>
-<ul>
-    <li>Baloons(i have baloons)</li>
-    <li>Cake</li>
-    <li>An appetite</li>
-</ul>
-<h3>There is where you need to go</h3>
-<!-- Example Google Maps Link -->
- <img src="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656" alt="address">
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
